--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,89 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-09-17 14:25:15 +0100 
+%% Created for Elizabeth Moorcroft at 2014-09-17 15:11:56 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inbook{walters2013challenges,
+	Author = {Adams, Rick A. and Pedersen, Scott C. and Walters, CharlotteL. and Collen, Alanna and Lucas, Tim and Mroz, Kim and Sayer, CatherineA. and Jones, KateE.},
+	Booktitle = {Bat Evolution, Ecology, and Conservation},
+	Da = {2013/01/01},
+	Date-Added = {2014-09-17 14:09:12 +0000},
+	Date-Modified = {2014-09-17 14:09:12 +0000},
+	Doi = {10.1007/978-1-4614-7397-8{\_}23},
+	Isbn = {978-1-4614-7396-1},
+	La = {English},
+	Pages = {479-499},
+	Publisher = {Springer New York},
+	Se = {23},
+	Title = {Challenges of Using Bioacoustics to Globally Monitor Bats},
+	Ty = {CHAP},
+	Url = {http://dx.doi.org/10.1007/978-1-4614-7397-8_23},
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/978-1-4614-7397-8_23},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-1-4614-7397-8%7B%5C_%7D23}}
+
+@inbook{jones2011indicator,
+	Author = {Jones, Kate E. and Russ, Jon A. and Bashta, Andriy-Taras and Bilhari, Zolt{\'a}lan and Catto, Colin and Cs{\H o}sz, Istv{\'a}n and Gorbachev, Alexander and Gy{\H o}rfi, P{\'a}leter and Hughes, Alice and Ivashkiv, Igor and Koryagina, Natalia and Kurali, Anik{\'a}lo and Langton, Steve and Collen, Alanna and Margiean, Georgiana and Pandourski, Ivan and Parsons, Stuart and Prokofev, Igor and Szodoray-Paradi, Abigel and Szodoray-Paradi, Farkas and Tilova, Elena and Walters, Charlotte L. and Weatherill, Aidan and Zavarzin, Oleg},
+	Booktitle = {Biodiversity Monitoring and Conservation},
+	Date-Added = {2014-09-17 14:05:21 +0000},
+	Date-Modified = {2014-09-17 14:05:21 +0000},
+	Doi = {10.1002/9781118490747.ch10},
+	Isbn = {9781118490747},
+	Keywords = {global acoustic monitoring; indicator bats program (iBats); ultrasonic biodiversity; ultrasonic indicator},
+	Pages = {211--247},
+	Publisher = {Wiley-Blackwell},
+	Title = {Indicator Bats Program: A System for the Global Acoustic Monitoring of Bats},
+	Ty = {CHAP},
+	Url = {http://dx.doi.org/10.1002/9781118490747.ch10},
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/9781118490747.ch10}}
+
+@manual{R,
+	Address = {Vienna, Austria},
+	Author = {R Core Team},
+	Date-Added = {2014-09-17 13:53:36 +0000},
+	Date-Modified = {2014-09-17 13:54:35 +0000},
+	Organization = {R Foundation for Statistical Computing},
+	Title = {R: A Language and Environment for Statistical Computing},
+	Url = {http://www.R-project.org/},
+	Year = {2014},
+	Bdsk-Url-1 = {http://www.R-project.org/}}
+
+@webpage{ManualtitleR:ALanguageandEnvironmentforStatisticalComputingauthorRCoreTeamorganizationRFoundationforStatisticalComputingaddressViennaAustriayear2014urlhttp://www.R-project.org/,
+	Date-Added = {2014-09-17 13:53:29 +0000},
+	Date-Modified = {2014-09-17 13:53:34 +0000}}
+
+@article{jones2009pantheria,
+	Abstract = {Analyses of life-history, ecological, and geographic trait differences among species, their causes, correlates, and likely consequences are increasingly important for understanding and conserving biodiversity in the face of rapid global change. Assembling multispecies trait data from diverse literature sources into a single comprehensive data set requires detailed consideration of methods to reliably compile data for particular species, and to derive single estimates from multiple sources based on different techniques and definitions. Here we describe PanTHERIA, a species-level data set compiled for analysis of life history, ecology, and geography of all known extant and recently extinct mammals. PanTHERIA is derived from a database capable of holding multiple geo-referenced values for variables within a species containing 100?740 lines of biological data for extant and recently extinct mammalian species, collected over a period of three years by 20 individuals. PanTHERIA also includes spatial databases of mammalian geographic ranges and global climatic and anthropogenic variables. Here we detail how the data fields are extracted and defined for PanTHERIA using a customized data input format (MammalForm); how data were collected from the literature, species names and sources tracked, error-checking and validation procedures applied, and how data were consolidated into species-level values for each variable. Tables of the consolidated species-level values are made available for each of two recent species-level taxonomic classifications of mammals, as well as associated taxonomic synonymy conversion and data-input files. This study provides a useful guide to prospective researchers on how to structure and codify life-history, ecological, geographic, and taxonomic data and methods to extract meaningful species-level traits. It also provides comprehensive information on traits like size, diet, environmental conditions, and ecology to permit macroecological and macroevolutionary analyses of this important clade. The complete data sets corresponding to abstracts published in the Data Papers section of the journal are published electronically in Ecological Archives at ?http://esapubs.org/archive?. (The accession number for each Data Paper is given directly beneath the title.)},
+	Annote = {doi: 10.1890/08-1494.1},
+	Annote1 = {Analyses of life-history, ecological, and geographic trait differences among species, their causes, correlates, and likely consequences are increasingly important for understanding and conserving biodiversity in the face of rapid global change. Assembling multispecies trait data from diverse literature sources into a single comprehensive data set requires detailed consideration of methods to reliably compile data for particular species, and to derive single estimates from multiple sources based on different techniques and definitions. Here we describe PanTHERIA, a species-level data set compiled for analysis of life history, ecology, and geography of all known extant and recently extinct mammals. PanTHERIA is derived from a database capable of holding multiple geo-referenced values for variables within a species containing 100?740 lines of biological data for extant and recently extinct mammalian species, collected over a period of three years by 20 individuals. PanTHERIA also includes spatial databases of mammalian geographic ranges and global climatic and anthropogenic variables. Here we detail how the data fields are extracted and defined for PanTHERIA using a customized data input format (MammalForm); how data were collected from the literature, species names and sources tracked, error-checking and validation procedures applied, and how data were consolidated into species-level values for each variable. Tables of the consolidated species-level values are made available for each of two recent species-level taxonomic classifications of mammals, as well as associated taxonomic synonymy conversion and data-input files. This study provides a useful guide to prospective researchers on how to structure and codify life-history, ecological, geographic, and taxonomic data and methods to extract meaningful species-level traits. It also provides comprehensive information on traits like size, diet, environmental conditions, and ecology to permit macroecological and macroevolutionary analyses of this important clade. The complete data sets corresponding to abstracts published in the Data Papers section of the journal are published electronically in Ecological Archives at ?http://esapubs.org/archive?. (The accession number for each Data Paper is given directly beneath the title.)},
+	Author = {Jones, Kate E. and Bielby, Jon and Cardillo, Marcel and Fritz, Susanne A. and O'Dell, Justin and Orme, C. David L. and Safi, Kamran and Sechrest, Wes and Boakes, Elizabeth H. and Carbone, Chris and Connolly, Christina and Cutts, Michael J. and Foster, Janine K. and Grenyer, Richard and Habib, Michael and Plaster, Christopher A. and Price, Samantha A. and Rigby, Elizabeth A. and Rist, Janna and Teacher, Amber and Bininda-Emonds, Olaf R. P. and Gittleman, John L. and Mace, Georgina M. and Purvis, Andy and Michener, W. K.},
+	Booktitle = {Ecology},
+	Da = {2009/09/01},
+	Date = {2009/08/17},
+	Date-Added = {2014-09-17 13:46:59 +0000},
+	Date-Modified = {2014-09-17 13:48:23 +0000},
+	Doi = {10.1890/08-1494.1},
+	Isbn = {0012-9658},
+	Journal = {Ecology},
+	Journal1 = {Ecology},
+	M3 = {doi: 10.1890/08-1494.1},
+	Month = {2014/09/17},
+	Number = {9},
+	Pages = {2648},
+	Publisher = {Ecological Society of America},
+	Title = {PanTHERIA: a species-level database of life history, ecology, and geography of extant and recently extinct mammals},
+	Ty = {JOUR},
+	Url = {http://dx.doi.org/10.1890/08-1494.1},
+	Volume = {90},
+	Year = {2009},
+	Year1 = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1890/08-1494.1}}
 
 @article{hayes2000assumptions,
 	Author = {Hayes, John P},
@@ -257,21 +334,25 @@
 @article{anderson2001need,
 	Author = {Anderson, David R},
 	Date-Added = {2014-07-11 14:20:10 +0000},
-	Date-Modified = {2014-07-11 14:20:10 +0000},
+	Date-Modified = {2014-09-17 13:41:06 +0000},
 	Journal = {Wildlife Society Bulletin},
+	Number = {4},
 	Pages = {1294--1297},
 	Publisher = {JSTOR},
 	Title = {The need to get the basics right in wildlife field studies},
+	Volume = {29},
 	Year = {2001}}
 
 @article{cutler1999using,
 	Author = {Cutler, Tricia L and Swann, Don E},
 	Date-Added = {2014-07-11 13:09:22 +0000},
-	Date-Modified = {2014-07-11 13:09:22 +0000},
+	Date-Modified = {2014-09-17 13:42:58 +0000},
 	Journal = {Wildlife Society Bulletin},
+	Number = {3},
 	Pages = {571--581},
 	Publisher = {JSTOR},
 	Title = {Using remote photography in wildlife ecology: a review},
+	Volume = {27},
 	Year = {1999}}
 
 @inproceedings{heupel2012trends,
@@ -439,11 +520,13 @@
 @article{marcoux2011local,
 	Author = {Marcoux, Marianne and Auger-M{\'e}th{\'e}, Marie and Chmelnitsky, Elly G and Ferguson, Steven H and Humphries, Murray M},
 	Date-Added = {2014-06-23 15:11:18 +0000},
-	Date-Modified = {2014-06-23 15:11:18 +0000},
+	Date-Modified = {2014-09-17 13:49:44 +0000},
 	Journal = {Arctic},
+	Number = {3},
 	Pages = {307--316},
 	Publisher = {JSTOR},
 	Title = {Local passive acoustic monitoring of narwhal presence in the Canadian Arctic: a pilot project},
+	Volume = {64},
 	Year = {2011}}
 
 @article{straight2014passive,
@@ -580,16 +663,6 @@
 	Volume = {45},
 	Year = {2008}}
 
-@manual{R,
-	Address = {Vienna, Austria},
-	Author = {{R Development Core Team}},
-	Note = {ISBN 3-900051-07-0},
-	Organization = {R Foundation For Statistical Computing},
-	Title = {R: A Language And Environment For Statistical Computing},
-	Url = {Http://Www.R-Project.Org},
-	Year = {2010},
-	Bdsk-Url-1 = {Http://Www.R-Project.Org}}
-
 @article{pollock2002large,
 	Author = {Pollock, Kenneth H and Nichols, James D and Simons, Theodore R and Farnsworth, George L and Bailey, Larissa L and Sauer, John R},
 	Journal = {Environmetrics},
@@ -602,8 +675,12 @@
 
 @article{rovero2013camera,
 	Author = {Rovero, Francesco and Zimmermann, Fridolin and Berzi, Duccio and Meek, Paul},
+	Date-Modified = {2014-09-17 13:57:31 +0000},
 	Journal = {Hystrix},
-	Title = {" Which camera trap type and how many do I need?" A review of camera features and study designs for a range of wildlife research applications.},
+	Number = {2},
+	Pages = {148--156},
+	Title = {"Which camera trap type and how many do I need?" A review of camera features and study designs for a range of wildlife research applications.},
+	Volume = {24},
 	Year = {2013}}
 
 @article{gese2001monitoring,
@@ -625,10 +702,13 @@
 
 @article{ofarrel1999comparison,
 	Author = {O'Farrell, Michael J and Gannon, William L},
+	Date-Modified = {2014-09-17 13:51:40 +0000},
 	Journal = {Journal of Mammalogy},
+	Number = {1},
 	Pages = {24--30},
 	Publisher = {JSTOR},
 	Title = {A comparison of acoustic versus capture techniques for the inventory of bats},
+	Volume = {80},
 	Year = {1999}}
 
 @article{mcdonald1999passive,
@@ -694,7 +774,8 @@
 
 @article{trolle2003estimation,
 	Author = {Trolle, Mogens and K{\'e}ry, Marc},
-	Journal = {Journal of mammalogy},
+	Date-Modified = {2014-09-17 14:06:08 +0000},
+	Journal = {Journal of Mammalogy},
 	Number = {2},
 	Pages = {607--614},
 	Title = {Estimation of ocelot density in the {Pantanal} using capture-recapture analysis of camera-trapping data},
@@ -753,7 +834,8 @@
 
 @article{yapp1956theory,
 	Author = {Yapp, WB},
-	Journal = {Bird study},
+	Date-Modified = {2014-09-17 14:11:56 +0000},
+	Journal = {Bird Study},
 	Number = {2},
 	Pages = {93--104},
 	Publisher = {Taylor \& Francis},
@@ -998,16 +1080,6 @@
 	Title = {Cryptic local populations in a temperate rainforest bat Chalinolobus tuberculatus in New Zealand},
 	Volume = {3},
 	Year = {2000}}
-
-@article{jones2009pantheria,
-	Author = {Jones, Kate E and Bielby, Jon and Cardillo, Marcel and Fritz, Susanne A and O'Dell, Justin and Orme, C David L and Safi, Kamran and Sechrest, Wes and Boakes, Elizabeth H and Carbone, Chris and others},
-	Journal = {Ecology},
-	Number = {9},
-	Pages = {2648--2648},
-	Publisher = {Eco. Soc. America},
-	Title = {{PanTHERIA}: a species-level database of life history, ecology, and geography of extant and recently extinct mammals: Ecological Archives E090-184},
-	Volume = {90},
-	Year = {2009}}
 
 @article{mendez2000reproductive,
 	Author = {M{\'e}ndez, Arturo Salame and Galindo, Crist{\'o}bal Galindo and Pulido, Jos{\'e} Ram{\'\i}rez and Campillo, Alondra Castro},
@@ -1314,17 +1386,10 @@
 	Volume = {3},
 	Year = {2000}}
 
-@incollection{walters2013challenges,
-	Author = {Walters, Charlotte L and Collen, Alanna and Lucas, Tim Christopher David and Mroz, Kim and Sayer, Catherine A and Jones, Kate E},
-	Booktitle = {Bat Evolution, Ecology, and Conservation},
-	Pages = {479--499},
-	Publisher = {Springer},
-	Title = {Challenges of Using Bioacoustics to Globally Monitor Bats},
-	Year = {2013}}
-
 @article{calisher2006bats,
 	Author = {Calisher, C.H. and Childs, J.E. and Field, H.E. and Holmes, K.V. and Schountz, T.},
-	Journal = {Clinical microbiology reviews},
+	Date-Modified = {2014-09-17 13:41:36 +0000},
+	Journal = {Clinical Microbiology Reviews},
 	Number = {3},
 	Pages = {531--545},
 	Publisher = {Am Soc Microbiol},
@@ -3211,14 +3276,6 @@
 	Publisher = {Wiley-Blackwell},
 	Title = {Indicator Bats Program: a system for the global acoustic monitoring of bats},
 	Year = {in press}}
-
-@article{jones2011indicator,
-	Author = {Jones, Kate E and Russ, Jon A and Bashta, Andriy-Taras and Bilhari, Zolt{\'a}lan and Catto, Colin and Cs{\H{o}}sz, Istv{\'a}n and Gorbachev, Alexander and Gy{\H{o}}rfi, P{\'a}leter and Hughes, Alice and Ivashkiv, Igor and others},
-	Journal = {Biodiversity Monitoring and Conservation: Bridging the Gap between Global Commitment and Local Action},
-	Pages = {211--247},
-	Publisher = {Wiley Online Library},
-	Title = {Indicator Bats Program: a system for the global acoustic monitoring of bats},
-	Year = {2011}}
 
 @article{zhuang2012noseleaf,
 	Author = {Zhuang, Q. and Wang, X.M. and Li, M.X. and Mao, J. and Wang, F.X.},
