Changes to reference with quotation marks

--- a/gREM_ms_17082014.tex
+++ b/gREM_ms_17082014.tex
@@ -11,7 +11,7 @@
 \def\tagform@#1{\maketag@@@{\ignorespaces#1\unskip\@@italiccorr}}
 \makeatother
 
-
+\usepackage{csquotes}
 \usepackage{fancyhdr} 
 %\fancyhf{}
 \lhead{}
