--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-09-17 15:11:56 +0100 
+%% Created for Elizabeth Moorcroft at 2014-09-17 15:29:48 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -675,11 +675,11 @@
 
 @article{rovero2013camera,
 	Author = {Rovero, Francesco and Zimmermann, Fridolin and Berzi, Duccio and Meek, Paul},
-	Date-Modified = {2014-09-17 13:57:31 +0000},
+	Date-Modified = {2014-09-17 14:28:45 +0000},
 	Journal = {Hystrix},
 	Number = {2},
 	Pages = {148--156},
-	Title = {"Which camera trap type and how many do I need?" A review of camera features and study designs for a range of wildlife research applications.},
+	Title = {\enquote{Which camera trap type and how many do I need?} A review of camera features and study designs for a range of wildlife research applications.},
 	Volume = {24},
 	Year = {2013}}
 
