--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-09-17 15:29:48 +0100 
+%% Created for Elizabeth Moorcroft at 2014-09-17 15:40:17 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -101,10 +101,13 @@
 @article{borchers2014continuous,
 	Author = {Borchers, David and Distiller, Greg and Foster, Rebecca and Harmsen, Bart and Milazzo, Lorenzo},
 	Date-Added = {2014-09-17 13:05:13 +0000},
-	Date-Modified = {2014-09-17 13:05:13 +0000},
+	Date-Modified = {2014-09-17 14:40:17 +0000},
 	Journal = {Methods in Ecology and Evolution},
+	Number = {7},
+	Pages = {656--665},
 	Publisher = {Wiley Online Library},
 	Title = {Continuous-time spatially explicit capture--recapture models, with an application to a jaguar camera-trap survey},
+	Volume = {5},
 	Year = {2014}}
 
 @article{sollmann2013using,
