--- a/supplementary-material/supplementaryMaterial.tex
+++ b/supplementary-material/supplementaryMaterial.tex
@@ -12,7 +12,7 @@
 \def\tagform@#1{\maketag@@@{\ignorespaces#1\unskip\@@italiccorr}}
 \makeatother
 
-\renewcommand\thefigure{S\arabic{figure}} 
+\renewcommand\thefigure{\thesection.\arabic{figure}} 
 \renewcommand\thesubfigure{\alph{subfigure}}
 \renewcommand\thetable{S\arabic{table}}     
 
@@ -198,6 +198,9 @@ These supplementary methods derive all the models used. For continuity, the gas 
 \input{REM-methods.tex}
 
 
+\bibliographystyle{../mee.bst}	
+\bibliography{../lucas-moorcroft-etal-refs.bib}	
+
 \clearpage
 \section{Supplementary Script: Symbolic algebra Python Script}
 \begin{itemize}
@@ -219,8 +222,18 @@ These supplementary methods derive all the models used. For continuity, the gas 
 \end{itemize}
 \lstinputlisting{supplementaryS4R.R}
 
-\bibliographystyle{../mee.bst}	
-\bibliography{../lucas-moorcroft-etal-refs.bib}	
+\clearpage
+\section{Supplementary Figure: Simulation model results of the gREM precision}
+\renewcommand\thefigure{\thesection} 
+
+\begin{figure}[h!]
+	\includegraphics[width=7cm]{../imgs/ResultStandardDeviation.pdf}
+	\caption{Simulation model results of the gREM precision given a range of sensor and signal widths, shown by the standard deviation of the error between the estimated and true densities. Standard deviations are shown from deep red to pink, representing high to low values between $0.483\times10^{-6}$ to $3.74\times10^{-6}$. 
+        } 
+	\label{f:StandardDevaition}
+\end{figure}
+
+
 
 \end{document}
 
