--- a/gREM_ms_fv.tex
+++ b/gREM_ms_fv.tex
@@ -216,7 +216,7 @@ The equation for $\bar{p}$ has been newly derived for each submodel in the gREM,
 \subsection*{Simulation model}
 
 \subsubsection*{gREM submodels}
-All gREM submodels showed a high accuracy, i.e., the mean difference between the estimated and actual values was not significantly different from zero across all models, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test, p \textgreater 0.002) (Figure~\ref{f:ModelBias}). However, the precision of the submodels do vary, where the gas model is the most precise and the SW7 sub model the least precise, having the smallest and the largest interquartile range, respectively (Figure~\ref{f:ModelBias}). The standard deviation of the error between the estimated and true densities is strongly related to both the sensor and signal widths (Figure~\ref{f:StandardDevaition}), such that larger widths have lower standard deviations (greater precision).
+All gREM submodels showed a high accuracy, i.e., the mean difference between the estimated and actual values was not significantly different from zero across all models, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test, p \textgreater 0.002) (Figure~\ref{f:ModelBias}). However, the precision of the submodels do vary, where the gas model is the most precise and the SW7 sub model the least precise, having the smallest and the largest interquartile range, respectively (Figure~\ref{f:ModelBias}). The standard deviation of the error between the estimated and true densities is strongly related to both the sensor and signal widths (), such that larger widths have lower standard deviations (greater precision).
 
 \begin{figure}[t]
 	\centering
@@ -226,13 +226,6 @@ All gREM submodels showed a high accuracy, i.e., the mean difference between the
 	\label{f:ModelBias}
 \end{figure}
 	
-\begin{figure}[t]
-	\includegraphics[width=7cm]{imgs/ResultStandardDeviation.pdf}
-	\caption{Simulation model results of the gREM precision given a range of sensor and signal widths, shown by the standard deviation of the error between the estimated and true densities. Standard deviations are shown from deep red to pink, representing high to low values between $0.483\times10^{-6}$ to $3.74\times10^{-6}$. 
-        } 
-	\label{f:StandardDevaition}
-\end{figure}
-
 
 \subsubsection*{Number of captures}
 
